# queryforgecpp

./: CMakeLists.txt  LICENSE  README.md
examples/: example1.cpp
include/: IDatabaseConnection.h  Ilogger.h  QueryPool.h
src/: QueryPool.cpp
